now really fixed autocomplete list not showing up

--- a/src/app/devices/devices.component.css
+++ b/src/app/devices/devices.component.css
@@ -1,7 +1,3 @@
-::ng-deep .cdk-overlay-container {
-    z-index:2000;
-}
-
 .list-title {
     display: inline-block
 }
