--- a/src/app/edit-composite-modal/edit-composite-modal.component.css
+++ b/src/app/edit-composite-modal/edit-composite-modal.component.css
@@ -1,3 +1,7 @@
+::ng-deep .cdk-overlay-container {
+    z-index:2000;
+}
+
 .full-width-form-element {
     width: 100%;
 }
